# CEDX_BACKEND_RUDRANSH

./: .gitignore  Makefile  README.md  audit.schema.json  main.py  pyproject.toml
cedx_pipeline/: __init__.py  amendment.py  config.py  errors.py  main.py
cedx_pipeline/agents/: __init__.py  contracts.py  model_router.py  orchestrator.py  queues.py  trace.py  transcript.py  verifier.py  worker.py
cedx_pipeline/detectors/: __init__.py  engine.py  injection.py  models.py  outlier.py  schema.py  stale.py
cedx_pipeline/governance/: __init__.py  audit.py  state_machine.py
cedx_pipeline/intake/: __init__.py  parsers.py  pipeline.py  registry.py
scripts/: probe_agent_failure.py  probe_append_only.py  probe_approval.py  probe_budget.py  probe_idempotency.py  replay.py  trace.py
seed/: feed.json
seed/inbox/: sample.eml
tests/: conftest.py  test_agents.py  test_amendment.py  test_audit.py  test_contracts.py  test_detectors.py  test_replay.py  test_state_machine.py  test_trace.py
