[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cedx-pipeline"
version = "0.1.0"
description = "CEDX Multi-Agent Data Governance Pipeline — Phase 1"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10.0,<1.0",
    "jsonschema>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
]

[project.scripts]
cedx-pipeline = "cedx_pipeline.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cedx_pipeline*"]
